fix layout overlapping

--- a/styles/split-layout.css
+++ b/styles/split-layout.css
@@ -12,11 +12,11 @@
 }
 
 .upper-section {
-    margin-bottom: -25%;
+    margin-bottom: -20%;
 }
 
 .lower-section {
-    margin-top: -25%;
+    margin-top: -20%;
 }
 
 .centered-element {
